# Robots-2.0-discord-bot

./: Live class link.txt  README.md  Recordings.txt  Robot update.txt  exam.txt  go away.txt  main.py  pyproject.toml  pyproject.toml.backup  replit.nix  replit_zip_error_log.txt
.cache/replit/: __replit_disk_meta.json
.cache/replit/nix/: env.json
.upm/: store.json  store.json181353073
