[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
discord = "^2.2.3"
Flask = "^2.3.2"
youtube_dl = "^2021.12.17"
PyNaCl = "^1.5.0"
google-api-python-client = "^2.88.0"
yt-dlp = "^2023.3.4"
pytz = "^2023.3"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
urllib3 = "1.26.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"